--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 pymongo==4.10.1
 python-dotenv==1.0.1
+requests==2.31.0
 sniffio==1.3.1
 starlette==0.45.3
 typing_extensions==4.12.2
