--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "axios": "^1.7.9",
+    "mammoth": "^1.9.0",
     "mongoose": "^8.9.5",
     "next": "15.1.6",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.2.3"
